Add Italian localised strings

--- a/Vienna/Interfaces/it.lproj/FeedCredentials.strings
+++ b/Vienna/Interfaces/it.lproj/FeedCredentials.strings
@@ -7,9 +7,21 @@
 /* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
 "34.title" = "L'accesso a %@ richiede l'inserimento delle tue credenziali di login";
 
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
+"37.title" = "Password:";
+
 /* Class = "NSButtonCell"; title = "Log In"; ObjectID = "38"; */
 "38.title" = "Login";
 
 /* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
 "39.title" = "Nome utente e password da te forniti saranno ricordati la prossima volta che aggiornerai questa iscrizione.";
+
+/* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "Lvs-Rd-GZy"; */
+"Lvs-Rd-GZy.title" = "Collegamento:";
+
+/* Class = "NSTextFieldCell"; title = "Details"; ObjectID = "VkU-PT-7wf"; */
+"VkU-PT-7wf.title" = "Dettagli";
+
+/* Class = "NSTextFieldCell"; title = "Feed:"; ObjectID = "yIO-aF-1Qg"; */
+"yIO-aF-1Qg.title" = "Feed:";
 
