--- a/Vienna/Interfaces/ja.lproj/MainMenu.strings
+++ b/Vienna/Interfaces/ja.lproj/MainMenu.strings
@@ -43,7 +43,7 @@
 /* Class = "NSMenuItem"; title = "Vienna Help"; ObjectID = "111"; */
 "111.title" = "Vienna ヘルプ";
 
-/* Class = "NSMenuItem"; title = "Preferences…"; ObjectID = "129"; */
+/* Class = "NSMenuItem"; title = "Preferences…"; ObjectID = "129"; Note = "Apple renamed \"Preferences\" to \"Settings\" in macOS 13. The menu item is renamed automatically at runtime. Please use the default term for the preferences window that was used until macOS 12."; */
 "129.title" = "環境設定…";
 
 /* Class = "NSMenu"; title = "Services"; ObjectID = "130"; */
