--- a/Vienna/Resources/nl.lproj/Localizable.strings
+++ b/Vienna/Resources/nl.lproj/Localizable.strings
@@ -346,7 +346,7 @@
 "Locate…" = "Zoek op…";
 
 /* No comment provided by engineer. */
-"Make sure the username and password needed to access the Open Reader server are correctly set in Vienna's preferences. Also check your network access." = "Controleer of gebruikersnaam en wachtwoord voor de Open Reader-server juist zijn ingesteld in de voorkeuren. Controleer ook je netwerkverbinding.";
+"Make sure the username and password needed to access the Open Reader server are correctly set in Vienna's preferences. Also check your network access." = "Controleer of gebruikersnaam en wachtwoord voor de Open Reader-server juist zijn ingesteld in de instellingen. Controleer ook je netwerkverbinding.";
 
 /* Title of a menu item */
 "Mark All Articles as Read" = "Markeer alles als gelezen";
